fix the UI align issue

--- a/src/components/Dashboard/Swap/styles.css
+++ b/src/components/Dashboard/Swap/styles.css
@@ -259,3 +259,7 @@ span.lft-margin{
 		margin-left: 6px;
 	}
 }
+
+.slip-bottom{
+	padding-top: 20px !important;
+}
